--- a/config/database.yml
+++ b/config/database.yml
@@ -62,6 +62,10 @@ development:
 test:
   <<: *default
   database: blog1_test
+  host: <%= ENV.fetch("DB_BLOG1_HOST") %>
+  port: <%= ENV.fetch("DB_BLOG1_PORT") %>
+  username: <%= ENV.fetch("DB_BLOG1_USERNAME") %>
+  password: <%= ENV.fetch("DB_BLOG1_PASSWORD") %>
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
