--- a/test/fixtures/articles.yml
+++ b/test/fixtures/articles.yml
@@ -2,10 +2,14 @@
 
 one:
   title: MyString
+  location: MyString
+  excerpt: MyString
   body: MyText
-  published_at: 2022-08-12 09:25:10
+  published_at: 2022-08-12 11:23:39
 
 two:
   title: MyString
+  location: MyString
+  excerpt: MyString
   body: MyText
-  published_at: 2022-08-12 09:25:10
+  published_at: 2022-08-12 11:23:39
